#167-disease 관련 리팩토링